# gen/http/books/server/encode_decode.go
@@ -45,6 +45,10 @@ func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 			}
 			return nil, goa.DecodePayloadError(err.Error())
 		}
+		err = ValidateCreateRequestBody(&body)
+		if err != nil {
+			return nil, err
+		}
 		payload := NewCreateBook(&body)
 
 		return payload, nil
@@ -89,6 +93,10 @@ func DecodeUpdateBookRequest(mux goahttp.Muxer, decoder func(*http.Request) goah
 				return nil, goa.MissingPayloadError()
 			}
 			return nil, goa.DecodePayloadError(err.Error())
+		}
+		err = ValidateUpdateBookRequestBody(&body)
+		if err != nil {
+			return nil, err
 		}
 
 		var (
@@ -210,10 +218,10 @@ func unmarshalBookRequestBodyToBooksBook(v *BookRequestBody) *books.Book {
 	}
 	res := &books.Book{
 		ID:          v.ID,
-		Title:       v.Title,
-		Author:      v.Author,
-		BookCover:   v.BookCover,
-		PublishedAt: v.PublishedAt,
+		Title:       *v.Title,
+		Author:      *v.Author,
+		BookCover:   *v.BookCover,
+		PublishedAt: *v.PublishedAt,
 	}
 
 	return res
